# gtfs_rt_rater_frontend

./: .gitignore  next.config.ts  package-lock.json  package.json
.github/workflows/: build.yml  lint.yml
app/: globals.css
app/[locale]/: layout.tsx  page.tsx
app/[locale]/feeds/: page.tsx
app/[locale]/feeds/[feed_id]/: page.tsx
common/api/: feeds.ts
common/components/: GradeBadge.tsx
common/types/: feeds.ts
examples/aggregates/: feeds.json
examples/aggregates/feeds/: mdb-2335.json
messages/: en.json
modules/feedDetail/: FeedDetails.tsx  FieldsTable.tsx
modules/feeds/: FeedsList.tsx  SearchInput.tsx
modules/landing/: LandingPage.tsx
server/: app.py  pyproject.toml  requirements.txt
server/.chalice/: config.json  policy.json
server/chalicelib/: config.py  mobility_database.py  models.py  s3.py  static_data.py
